# protoc-gen-jsonschema

./: .gitignore  BUILD.bazel  Makefile  README.md  WORKSPACE  buf.gen.yaml  buf.yaml  deps.bzl  go.mod  go.sum  options.proto
cmd/protoc-gen-jsonschema/: BUILD.bazel  main.go
internal/converter/: BUILD.bazel  converter.go  converter_test.go  sourcecodeinfo.go  types.go
internal/converter/testdata/: BUILD.bazel
internal/converter/testdata/proto/: ArrayOfEnums.proto  ArrayOfMessages.proto  ArrayOfObjects.proto  ArrayOfPrimitives.proto  BigIntAsString.proto  BytesPayload.proto  CyclicalReference.proto  EnumWithMessage.proto  Enumception.proto  GoogleInt64ValueAllowNull.proto  GoogleInt64ValueDisallowStringAllowNull.proto  GoogleValue.proto  ImportedEnum.proto  JSONFields.proto  Maps.proto  MessageWithComments.proto  NestedMessage.proto  NestedObject.proto  NoPackage.proto  OneOf.proto  OptionAllowNullValues.proto  OptionDisallowAdditionalProperties.proto  OptionEnumsAsConstants.proto  OptionEnumsAsStringsOnly.proto  OptionEnumsTrimPrefix.proto  OptionFileExtension.proto  OptionIgnoredEnum.proto  OptionIgnoredField.proto  OptionIgnoredFile.proto  OptionIgnoredMessage.proto  OptionMaxLength.proto  OptionMinLength.proto  OptionPattern.proto  OptionRequiredField.proto  OptionRequiredMessage.proto  PayloadMessage.proto  PayloadMessage2.proto  Proto2NestedMessage.proto  Proto2NestedObject.proto  SelfReference.proto  (+6 more)
jsonschemas/: FieldOptions.json
protos/: buf.gen.yaml  buf.yaml
protos/options/: BUILD.bazel  options.pb.go  options.proto
