load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/aaomidi/protoc-gen-jsonschema
# gazelle:go_generate_proto false
# gazelle:proto disable
gazelle(name = "gazelle")

# adding rule to update deps
gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=deps.bzl%go_dependencies",
        "-prune",
    ],
    command = "update-repos",
)

exports_files(["deps.bzl"])
